changed nav to buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,6 @@
       <app-side-nav></app-side-nav>
     </nav>
   </div>
+  <!--<button type="submit" (click)="appservice.loginUser()"> LogIn</button>-->
   <router-outlet></router-outlet>
 </div>
