--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,3 +1,16 @@
 <div *ngFor="let genre of genres; let i = index;">
-    <span id='genre'>{{ genre.name }}</span>
+    <!--<a href="{{genre.id}}" id='genre' title="{{genre.name}}">{{genre.name}}</a>-->
+    <button class="btn btn-link" onclick=onClick()>{{genre.name}}</button>
+    <!--<button onclick="myFunction()">Click me</button>-->
+
+    <!--<p id="demo"></p>-->
+
+
+    <!--<script>-->
+    <!--    function myFunction() {-->
+    <!--        document.getElementById("demo").innerHTML = "Hello World";-->
+    <!--    }-->
+    <!--</script>-->
+    <!--<span id='genre'>{{ genre.name }}</span>-->
 </div>
+//commented code are things i tried. i need to get the genre id's out of the array of objects and filter them out. then display.
