--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let genre of genres; let i = index;">
     <!--<a href="{{genre.id}}" id='genre' title="{{genre.name}}">{{genre.name}}</a>-->
-    <button class="btn btn-link" onclick=onClick()>{{genre.name}}</button>
+    <button class="btn btn-link" type=submit (click)=onClick(genre)>{{genre.name}}</button>
     <!--<button onclick="myFunction()">Click me</button>-->
 
     <!--<p id="demo"></p>-->
@@ -13,4 +13,4 @@
     <!--</script>-->
     <!--<span id='genre'>{{ genre.name }}</span>-->
 </div>
-//commented code are things i tried. i need to get the genre id's out of the array of objects and filter them out. then display.
+<!--//commented code are things i tried. i need to get the genre id's out of the array of objects and filter them out. then display.-->
