--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
         </section>
         <div class="login-group">
             <clr-input-container>
-                <input type="text" name="username" clrInput placeholder="Username" [(ngModel)]="form.username" />
+                <input type="text" name="email" clrInput placeholder="Email" [(ngModel)]="form.email" />
             </clr-input-container>
             <clr-password-container>
                 <input type="password" name="password" clrPassword placeholder="Password" [(ngModel)]="form.password" />
