login/register works

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <form class="login" (ngSubmit)="onSubmit(value)">
         <section class="title">
             <h3 class="welcome">Log</h3>
-            Your ass in!
+            Your @$$ in!
         </section>
         <div class="login-group">
             <clr-input-container>
@@ -12,13 +12,11 @@
                 <input type="password" name="password" clrPassword placeholder="Password" [(ngModel)]="form.password" />
             </clr-password-container>
             <button type="submit" class="btn btn-primary">NEXT</button>
+            <a href="/register">New User? Register Here</a>
+
         </div>
     </form>
 </div>
-
-
-
-
 
 
 <!--<clr-modal [clrModalStaticBackdrop]="true">-->
