--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -22,11 +22,11 @@
 
     display: block;
     padding: 4px;
+    // min-width: 300px; // min-height: 450px;
     margin-bottom: 21px;
     line-height: 1.42857143;
     background-color: #2b3e50;
     border: 1px solid #dddddd;
     border-radius: 0;
     transition: border .2s ease-in-out;
-
 }
