--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,8 +1,8 @@
 <div class="login-wrapper">
     <form class="login" (ngSubmit)="onSubmit(value)">
         <section class="title">
-            <h3 class="welcome">Log</h3>
-            Your ass in!
+            <h3 class="welcome">Register</h3>
+            Your @$$ in!
         </section>
         <div class="login-group">
 
