--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
     </div>
     <form class="search" (ngSubmit)="onSubmit(value)">
         <label for="search_input">
-            <input id="search_input" type="text" placeholder="Search for keywords..." name="value"/>
+            <input id="search_input" [(ngModel)]="value" type="text" placeholder="Search for keywords..." name="value"/>
         </label>
     </form>
 
@@ -26,16 +26,7 @@
                 <ng-template #out>
                     <button (click)=onClick() class="btn btn-link">Log Out</button>
                 </ng-template>
-
-
             </clr-dropdown-menu>
         </clr-dropdown>
     </div>
-
-
-    <!--<div class="header-actions">-->
-    <!--    <a href="./" class="nav-link nav-icon">-->
-    <!--        <clr-icon shape="star"></clr-icon>-->
-    <!--    </a>-->
-    <!--</div>-->
 </header>
